--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@primevue/themes": "^4.0.4",
     "primevue": "^4.0.4",
-    "vue": "^3.4.29"
+    "vue": "^3.4.29",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
