Finish add more events and more pages in week 5 activity.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yzhuang-library",
+  "name": "nomash-library",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -12,12 +12,10 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.0.4",
-    "@vee-validate/rules": "^4.13.2",
+    "bootstrap": "^5.3.3",
     "primevue": "^4.0.4",
-    "vee-validate": "^4.13.2",
     "vue": "^3.4.29",
-    "yup": "^1.4.0",
-    "zod": "^3.23.8"
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
